static/css/main.css
/* ... */
input:focus, input[type="text"]:focus {
    outline: none;
}


::-webkit-input-placeholder {
    color: #CCC;
}

:-moz-placeholder {
    /* Firefox 18- */
    color: #CCC;
}

::-moz-placeholder {
    /* Firefox 19  */
    color: #CCC;
}

:-ms-input-placeholder {
    color: #CCC;
}

ul {
    margin: 0;
}

li {
    list-style-type: none;
}

a {
    color: #42c2d2;
}

a:hover {
    color: #12A2C2;
}

p:last-of-type {
    margin-bottom: 0;
}

::selection {
    background: #91DEE7;
    /* WebKit/Blink Browsers */;
}

::-moz-selection {
    background: #91DEE7;
    /* Gecko Browsers */;
}

.column, .columns, .wrapper {
    padding-left: 2.9375rem;
    padding-right: 2.9375rem;
}

.section-title {
    margin-bottom: 1.5em;
    font-weight: bold;
    color: #fff;
    text-transform: uppercase;
}

.round-corners {
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
}

.to {
    display: table;
}

.ti {
    display: table-cell;
    vertical-align: middle;
}

#arrow {
    width: 16px;
    height: 16px;
    border-right: 4px solid #fff;
    border-bottom: 4px solid #fff;
    position: absolute;
    margin: 2em 0 3em 0;
    left: 50%;
    margin-left: -15px;
    -moz-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
    filter: alpha(opacity=90);
    opacity: 0.9;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    border-radius: 4px;
}

#over {
    position: relative;
    top: 100%;
    z-index: 500;
}

/*
.ghost {
    visibility: hidden;
}


.d3-tip {
    line-height: 1;
    font-weight: bold;
    padding: 12px;
    background: rgba(0, 0, 0, 0.8);
    color: #fff;
    border-radius: 2px;
}

.d3-tip:after {
    box-sizing: border-box;
    display: inline;
    font-size: 10px;
    width: 100%;
    line-height: 1;
    color: rgba(0, 0, 0, 0.8);
    content: "\25BC";
    position: absolute;
    text-align: center;
}

.d3-tip.n:after {
    margin: -1px 0 0 0;
    top: 100%;
    left: 0;
}
*/

/*
==========================================================================
SPLASH
========================================================================== */

#splash {
    width: 100%;
    height: 100%;
    position: fixed;
    background: url(../img/hourofcode_computer.jpg) no-repeat center center;
    -webkit-background-size: cover;
    background-size: cover;
}

#overlay {
    position: fixed;
    top: 0;
    width: 100%;
    height: 100%;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
    filter: alpha(opacity=80);
    opacity: 0.8;
    background-color: #000;
    z-index: -50;
}

#splash-video {
    position: fixed;
    right: 0;
    bottom: 0;
    z-index: -100;
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    -webkit-background-size: cover;
    background-size: cover;
    display: none;
}

#splash-return {
    position: fixed;
    right: 1.5em;
    top: 1em;
    display: inline-block;
    padding: 0 1.5em;
    color: white;
    font-weight: bold;
    text-transform: uppercase;
    z-index: 50;
    background-color: #646464;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
    filter: alpha(opacity=60);
    opacity: 0.6;
    -moz-transition: 0.2s opacity;
    -o-transition: 0.2s opacity;
    -webkit-transition: 0.2s opacity;
    transition: 0.2s opacity;
    display: none;
}

#splash-return:hover {
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
    filter: alpha(opacity=100);
    opacity: 1;
    -moz-transition: 0.2s opacity;
    -o-transition: 0.2s opacity;
    -webkit-transition: 0.2s opacity;
    transition: 0.2s opacity;
}

#splash-info {
    position: relative;
    top: 0;
    height: 100%;
    color: #fff;
}

#splash .to {
    width: 99%;
    height: 100%;
    position: relative;
    top: 1em;
}

.site-title, .site-title a, .event-date, .event-host, .site-description, #video-link:link, #video-link:visited, .into-link:focus {
    color: #fff;
}

#splash .site-title {
    margin: 0 0 0.3em 0;
}

.site-title {
    display: inline-block;
    margin: 0.6em 0 0.2em 0;
    padding-left: 1em;
    -webkit-background-size: 1.8em;
    background-size: 1.8em;
    font-weight: 400;
    font-size: 2.7vw; /* 4.8em; */
    line-height: 1.2em;
}


/* CITY-PICKER PANEL */
.site-description, .event-date {
    line-height: 2em;
    padding: 10px;
}

.event-date a {
    color: #fff;
    text-decoration: underline;
}

.site-description {
    margin-top: 0.5em;
    font-size: 1.4em;
    font-weight: 300;
}

.event-date, .event-host {
    font-size: 1.3em;
    font-weight: 700;
}


.register-button {
    margin-top: 1.2em;
    padding: 1.2em 3em 1.1em 3em;
    background-color: rgb(26, 172, 186);
    font-size: 1.2em;
}

.register-button:hover {
    background-color: #FFAE47;
}

#video-link:link {
    display: inline-block;
    margin-top: 0.5em;
    padding: 0.8em 0 0.8em 2.3em;
    font-size: 1.2em;
    background: url(../img/video-icon.png) no-repeat left center;
}

/*
==========================================================================
NAVIGATION
========================================================================== */
#nav-button {
    margin-right: 1em;
    padding-left: 2.5em;
    display: inline-block;
    z-index: 500;
    background: url(../img/nav-icon.png) no-repeat 1em 50%;
    color: #fff;
    text-transform: uppercase;
    border: none;
    font-weight: 700;
    -webkit-background-size: 0.9em;
    background-size: 0.9em;
}

.nav-mobile, .nav-large {
    position: relative;
    z-index: 50;
}

.site-nav {
    padding-top: 0.55em;
}
/* ... */

